getting started on day 2

--- a/site/files/08-classifying-penguins.ipynb
+++ b/site/files/08-classifying-penguins.ipynb
@@ -466,6 +466,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26a09370-b9c6-4a42-9e1e-a3c73d4b198b",
+   "metadata": {},
+   "source": [
+    "Side-note: neural networks and other advanced machine learning models aren't always necessary!\n",
+    "\n",
+    "For this problem, I would consider a logistic regression good enough. Adding hidden layers only introduces problems with overfitting and non-determinism."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb47a3b3-3ebc-463f-a7ad-944df0596179",
+   "metadata": {},
+   "source": [
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6c4eb420-d061-475c-8bc1-b401026a7ced",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
