start exploring the dataset

--- a/site/files/09-shakespeare.ipynb
+++ b/site/files/09-shakespeare.ipynb
@@ -1264,18 +1264,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d5d2d40-cce3-4b9c-abd6-654fe9648f31",
+   "cell_type": "markdown",
+   "id": "22d9f28d-7ca0-4a42-a8e2-3b7780f914f8",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np"
+    "This used to be a big dataset, used to illustrate large storage devices, like in [this definition of CD-ROM](https://vintageapple.org/apple_ii/pdf/Apple_IIGS__Ownwers_Guide_1986.pdf) from 1986:\n",
+    "\n",
+    "<img src=\"img/shakespeare-a-big-dataset.png\" width=\"600\">\n",
+    "\n",
+    "Now it's small enough to easily load in JupyterLite but is still big enough to be interesting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a0e5f10-bc12-46fc-ba20-de8f8b8a329e",
+   "metadata": {},
+   "source": [
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38f8767d-18fb-4b0c-907e-eab6720f13d3",
+   "metadata": {},
+   "source": [
+    "This file comes from Project Gutenberg, [ebook #100](https://www.gutenberg.org/ebooks/100):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "1e692285-26fe-4e53-9cbd-95ea094627c9",
    "metadata": {},
    "outputs": [],
@@ -1286,53 +1304,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "f2d2cd8d-2291-4550-b468-56bc01368edf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5367504"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(corpus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
+   "id": "59238d63-7e71-4976-b412-4df3c5b5f405",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.367504"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(corpus) / 1e6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79440957-226f-4d21-add6-ee5ec85ead69",
+   "metadata": {},
+   "source": [
+    "5.36 MB (a whole laser disk, apparently)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69243038-8b18-4bf1-95cf-10846f219be9",
+   "metadata": {},
+   "source": [
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "41439cb7-f5f1-466c-9006-966543672fd1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ook up that fire,\n",
+      "Which many legions of true hearts had warmed,\n",
+      "And so the general of hot desire,\n",
+      "Was sleeping by a virgin hand disarmed.\n",
+      "This brand she quenched in a cool well by,\n",
+      "Which from Love’s fire took heat perpetual,\n",
+      "Growing a bath and healthful remedy,\n",
+      "For men diseased; but I, my mistress’ thrall,\n",
+      "  Came there for cure and this by that I prove,\n",
+      "  Love’s fire heats water, water cools not love.\n",
+      "\n",
+      "THE END\n",
+      "\n",
+      "ALL’S WELL THAT ENDS WELL\n",
+      "\n",
+      "Contents\n",
+      "\n",
+      "ACT I\n",
+      "Scene I. Rossillon. A room in the Countess’s palace.\n",
+      "Scene II. Paris. A room in the King’s palace.\n",
+      "Scene III. Rossillon. A Room in the Palace.\n",
+      "\n",
+      "ACT II\n",
+      "Scene I. Paris. A room in the King’s palace.\n",
+      "Scene II. Rossillon. A room in the Countess’s palace.\n",
+      "Scene III. Paris. The King’s palace.\n",
+      "Scene IV. Paris. The King’s palace.\n",
+      "Scene V. Another room in the same.\n",
+      "\n",
+      "ACT III\n",
+      "Scene I. Florence. A room in the Duke’s palace.\n",
+      "Scene II. Rossillon. A room in the Countess’s palace.\n",
+      "Scene III. Florence. Before the Duke’s palace.\n",
+      "Scene IV. Rossillon. A roo\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus[100000:101000])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1bf66152-7640-416e-a439-cdcb68dc4bd8",
+   "cell_type": "markdown",
+   "id": "2b0ba72c-2114-44d3-a833-89e824cf1f61",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "unique_characters = np.unique(np.frombuffer(corpus.encode(), np.uint8).reshape(-1, 1))\n",
-    "unique_characters"
+    "<br><br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "626cb458-2dfd-4c5d-8e01-6fe22e7439a5",
+   "metadata": {},
+   "source": [
+    "What distinct characters does it have?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c163efc-92c8-42ae-a49b-3d32165ce02e",
+   "execution_count": 57,
+   "id": "cc451885-2555-4260-a0a2-6083e6f9d6cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'\\n',\n",
+       " ' ',\n",
+       " '!',\n",
+       " '#',\n",
+       " '$',\n",
+       " '%',\n",
+       " '&',\n",
+       " '(',\n",
+       " ')',\n",
+       " '*',\n",
+       " ',',\n",
+       " '-',\n",
+       " '.',\n",
+       " '/',\n",
+       " '0',\n",
+       " '1',\n",
+       " '2',\n",
+       " '3',\n",
+       " '4',\n",
+       " '5',\n",
+       " '6',\n",
+       " '7',\n",
+       " '8',\n",
+       " '9',\n",
+       " ':',\n",
+       " ';',\n",
+       " '?',\n",
+       " 'A',\n",
+       " 'B',\n",
+       " 'C',\n",
+       " 'D',\n",
+       " 'E',\n",
+       " 'F',\n",
+       " 'G',\n",
+       " 'H',\n",
+       " 'I',\n",
+       " 'J',\n",
+       " 'K',\n",
+       " 'L',\n",
+       " 'M',\n",
+       " 'N',\n",
+       " 'O',\n",
+       " 'P',\n",
+       " 'Q',\n",
+       " 'R',\n",
+       " 'S',\n",
+       " 'T',\n",
+       " 'U',\n",
+       " 'V',\n",
+       " 'W',\n",
+       " 'X',\n",
+       " 'Y',\n",
+       " 'Z',\n",
+       " '[',\n",
+       " ']',\n",
+       " 'a',\n",
+       " 'b',\n",
+       " 'c',\n",
+       " 'd',\n",
+       " 'e',\n",
+       " 'f',\n",
+       " 'g',\n",
+       " 'h',\n",
+       " 'i',\n",
+       " 'j',\n",
+       " 'k',\n",
+       " 'l',\n",
+       " 'm',\n",
+       " 'n',\n",
+       " 'o',\n",
+       " 'p',\n",
+       " 'q',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 't',\n",
+       " 'u',\n",
+       " 'v',\n",
+       " 'w',\n",
+       " 'x',\n",
+       " 'y',\n",
+       " 'z',\n",
+       " 'À',\n",
+       " 'Æ',\n",
+       " 'Ç',\n",
+       " 'É',\n",
+       " 'à',\n",
+       " 'â',\n",
+       " 'æ',\n",
+       " 'ç',\n",
+       " 'è',\n",
+       " 'é',\n",
+       " 'ê',\n",
+       " 'ë',\n",
+       " 'î',\n",
+       " 'œ',\n",
+       " '—',\n",
+       " '‘',\n",
+       " '’',\n",
+       " '“',\n",
+       " '”',\n",
+       " '•',\n",
+       " '…',\n",
+       " '™',\n",
+       " '\\ufeff'}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "unique_characters.view(\"S1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3afc56a2-6701-48da-b7f5-a216e4fdf0c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.count_nonzero(unique_characters <= ord(\"z\"))"
+    "set(corpus)"
    ]
   }
  ],
