--- a/make-talk-11/main.tex
+++ b/make-talk-11/main.tex
@@ -33,7 +33,7 @@
 \definecolor{darkgreen}{rgb}{0,0.6,0}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
-\title[2024-07-08-scipy-teen-track-talk-11]{How is this the same and how is it different from ChatGPT?}
+\title[2024-07-08-scipy-teen-track-talk-11]{How is autocomplete like and how is it unlike ChatGPT?}
 \author{Jim Pivarski}
 \institute{Princeton University -- IRIS-HEP}
 \date{July 9, 2024}
@@ -57,8 +57,23 @@
 
 % START START START START START START START START START START START START START
 
+\begin{frame}{First difference: ChatGPT uses neural networks}
+\vspace{0.35 cm}
+\begin{columns}
+\column{0.4\linewidth}
+\includegraphics[width=\linewidth]{neural-network-for-language.pdf}
+
+\column{0.6\linewidth}
+asdf
+\end{columns}
+\end{frame}
+
 \begin{frame}{TITLE}
-CONTENT
+\includegraphics[width=\linewidth]{cross-attention-in-french.pdf}
+\end{frame}
+
+\begin{frame}{TITLE}
+\includegraphics[width=\linewidth]{cross-attention-in-hindi.pdf}
 \end{frame}
 
 \end{document}
