--- a/make-talk-11/main.tex
+++ b/make-talk-11/main.tex
@@ -64,8 +64,8 @@
 \column{0.4\linewidth}
 \includegraphics[width=\linewidth]{neural-network-for-language.pdf}
 
-\column{0.65\linewidth}
-First, we made a database of exact words.
+\column{0.6\linewidth}
+We made a database of exact words.
 
 \vspace{0.5 cm}
 Using a neural network, LLMs encode sequences of meanings, not the exact words (or letters).
