include 'machine translation'

--- a/site/files/05-scikit-learn.ipynb
+++ b/site/files/05-scikit-learn.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "markdown",
    "id": "f29fb166-634f-4c01-a9b9-a4d5def09a36",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Solutions to the first project (do not peek!)"
    ]
@@ -591,14 +593,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "1d374ad1-16af-4445-bee7-28b1c543f8d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"overflow: hidden;\"><iframe src=\"https://books.google.com/ngrams/graph?content=artificial+intelligence%2Cmachine+learning%2Cdata+mining%2Cneural+network%2Cdeep+learning&year_start=1950&year_end=2019&case_insensitive=on&corpus=en-2019&smoothing=3\" width=\"100%\" height=\"800\" scrolling=\"no\" style=\"border: none;\"></div>\n"
+       "<div style=\"overflow: hidden;\"><iframe src=\"https://books.google.com/ngrams/graph?content=artificial+intelligence%2Cmachine+learning%2Cdata+mining%2Cneural+network%2Cdeep+learning%2Cmachine+translation&year_start=1950&year_end=2019&case_insensitive=on&corpus=en-2019&smoothing=0\" width=\"100%\" height=\"800\" scrolling=\"no\" style=\"border: none;\"></div>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -610,7 +612,7 @@
    ],
    "source": [
     "%%html\n",
-    "<div style=\"overflow: hidden;\"><iframe src=\"https://books.google.com/ngrams/graph?content=artificial+intelligence%2Cmachine+learning%2Cdata+mining%2Cneural+network%2Cdeep+learning&year_start=1950&year_end=2019&case_insensitive=on&corpus=en-2019&smoothing=3\" width=\"100%\" height=\"800\" scrolling=\"no\" style=\"border: none;\"></div>"
+    "<div style=\"overflow: hidden;\"><iframe src=\"https://books.google.com/ngrams/graph?content=artificial+intelligence%2Cmachine+learning%2Cdata+mining%2Cneural+network%2Cdeep+learning%2Cmachine+translation&year_start=1950&year_end=2019&case_insensitive=on&corpus=en-2019&smoothing=0\" width=\"100%\" height=\"800\" scrolling=\"no\" style=\"border: none;\"></div>"
    ]
   }
  ],
