--- a/make-talk-11/main.tex
+++ b/make-talk-11/main.tex
@@ -57,7 +57,7 @@
 
 % START START START START START START START START START START START START START
 
-\begin{frame}{First difference: LLMs use neural networks}
+\begin{frame}{1$^{\mbox{st}}$ difference: LLMs use neural networks}
 \Large
 \vspace{0.35 cm}
 \begin{columns}
@@ -71,11 +71,30 @@ We made a database of exact words.
 Using a neural network, LLMs encode sequences of meanings, not the exact words (or letters).
 
 \vspace{0.5 cm}
-This makes it more sensitive to synonyms.
+This makes it more sensitive to both synonyms and multi-word context.
 \end{columns}
 \end{frame}
 
-\begin{frame}{Technique from language translation}
+\begin{frame}{From Andrej Karpathy's {\it Unreasonable Effectiveness of RNNs}}
+\Large
+\vspace{0.3 cm}
+\begin{columns}
+\column{0.64\linewidth}
+\includegraphics[width=\linewidth]{pane1.png}
+
+\column{0.36\linewidth}
+Activation of individual cells in neural networks that generate text.
+
+\vspace{0.5 cm}
+\textcolor{blue}{blue} is $+1$, \textcolor{red}{red} is $-1$.
+
+\large
+\vspace{0.5 cm}
+Some cells are gates that turn on and off submodels with different correlations, but most cells don't act on their own at all.
+\end{columns}
+\end{frame}
+
+\begin{frame}{$2^{\mbox{nd}}$ difference: attention mechanism (from language translation)}
 \Large
 \vspace{0.35 cm}
 \begin{columns}
@@ -84,7 +103,50 @@ This makes it more sensitive to synonyms.
 \end{columns}
 
 \vspace{0.25 cm}
-LLMs have a wide context window, but also a variable ``attention'' distribution that links related words over large distances.
+Our context window was exactly 5 tokens long. LLMs train an ``attention'' distribution that varies in size and shape for each token.
+\end{frame}
+
+\begin{frame}{From D.\ Bahdanau, K.\ Cho, Y.\ Bengio (2014)}
+\Large
+\vspace{-0.5 cm}
+\begin{columns}
+\column{0.58\linewidth}
+\hspace{-0.75 cm}\includegraphics[width=\linewidth]{real-cross-attention-a.pdf}
+
+\column{0.58\linewidth}
+\hspace{-1 cm}\includegraphics[width=\linewidth]{real-cross-attention-d.pdf}
+\end{columns}
+\end{frame}
+
+\begin{frame}{$3^{\mbox{rd}}$ difference: LLMs are huge}
+\vspace{0.5 cm}
+\includegraphics[width=\linewidth]{llm-number-of-parameters.pdf}
+\end{frame}
+
+\begin{frame}{$4^{\mbox{th}}$ difference: chat LLMs are fine-tuned for usefulness}
+\vspace{0.5 cm}
+\begin{columns}
+\column{0.92\linewidth}
+\includegraphics[width=\linewidth]{fine-tuning-for-chat.pdf}
+\end{columns}
+\end{frame}
+
+\begin{frame}{From L.\ Ouyang et al.\ /OpenAI (2022)}
+\large
+\vspace{0.4 cm}
+\begin{columns}
+\column{0.9\linewidth}
+\includegraphics[width=\linewidth]{fine-tuning-for-chat-results.pdf}
+\end{columns}
+
+\vspace{0.2 cm}
+\begin{columns}
+\column{0.68\linewidth}
+After the big model (GPT-3) was trained on raw text completions, the neural network weights were re-fitted to optimize for helpfulness, as defined by 40 paid users.
+
+\column{0.25\linewidth}
+\includegraphics[width=\linewidth]{Reinforcement_learning_diagram.pdf}
+\end{columns}
 \end{frame}
 
 \end{document}
